--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </li>
       </ul>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="./js/aysnc.js"></script>
     <script src="./js/ui.js"></script>
     <script src="./js/app.js"></script>
